--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
                 <fieldset> <!--Colocar um ao lado do outro-->
                     <div class="container">
-                        <input type="text" required name="rua" id="rua" autofocus>
+                        <input type="text" required name="rua" id="logradouro" autofocus>
                         <label for="rua">Endereço</label> 
                     </div>
                     <div class="container">
@@ -75,18 +75,18 @@
                         <label for="bairro">Bairro</label> 
                     </div>
                     <div class="container">
-                        <input type="text" required name="cep" id="cep" maxlength="8" autofocus>
+                        <input type="text" required name="cep" id="cep"  autofocus>
                         <label for="cep">Cep</label> 
                     </div>
                 </fieldset>
     
                 <fieldset>
                     <div class="container">
-                        <input type="text" name="cidade" id="cidade" autofocus>
+                        <input type="text" name="cidade" id="localidade" autofocus>
                         <label for="cidade">cidade</label> 
                     </div>
                     <div class="container">
-                        <input type="text" name="estado" id="estado" autofocus>
+                        <input type="text" name="estado" id="uf" autofocus>
                         <label for="estado">Estado</label> 
                     </div>
                 </fieldset>
