--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </fieldset>
       
-            <input type="submit" value="cadastrar" id="button">
+            <input type="submit" value="CADASTRAR" id="button">
         </form>
     </main>
     <section class="images">
