--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 </fieldset>
       
             <input type="submit" value="CADASTRAR" id="button">
+                <input type="reset" value="Limpar" id="btn">
         </form>
     </main>
     <section class="images">
